<resources>
    <string name="app_name">Nadres</string>
    <string name="field_req">Field required</string>
    <string name="login">Login</string>
    <string name="code">Code</string>
    <string name="user_phone">User Phone</string>
    <string name="are_you_have_account">Are You Have Account ?</string>
    <string name="register_as_a_teacher">Register as a Teacher</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="email">Email</string>
    <string name="detials_and_expereince">Detials And Expereince</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="student_name">Student Name</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="listening">listening</string>
    <string name="speaking">speaking</string>
    <string name="reading">reading</string>
    <string name="writing">writing</string>
    <string name="vocabulary">vocabulary</string>
    <string name="grammer">grammer</string>
    <string name="dictation">dictation</string>
    <string name="knowledge_bank">knowledge Bank</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="user_name">User Name</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="teachers">Teachers</string>
    <string name="educational_level">Educational level</string>
    <string name="classs">Class</string>
    <string name="the_stage">The stage</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="cannot_signup">Can Not Signup Without Accept Terms And Conditions</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="cancel">Cancel</string>
    <string name="choose_stage">Choose Stage</string>
    <string name="choose_classe">Choose Class</string>
    <string name="skill">Skill</string>
    <string name="sign_up">Sign Up</string>
    <string name="failed">Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ch_skill">Choose Skills</string>
    <string name="type_a_message">Type a message...</string>
    <string name="no_tearchers_found">No Tearchers Found</string>
    <string name="no_articles_found">آNo Articles Found</string>
    <string name="single_room">Single Room</string>
    <string name="group">Group</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">a min ago</string>
    <string name="min">min</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">h</string>
    <string name="yesterday">yesterday</string>
    <string name="video">Sent video message</string>
    <string name="voice">Sent voice message</string>
    <string name="image">Sent image</string>
    <string name="something">Check internet connection</string>
    <string name="invite">Invite</string>
    <string name="back">Back</string>
    <string name="please_wait_the_meeting_host_will_let_you_in_soon">Please wait,the meeting host will let you in soon</string>
    <string name="meeting">Meeting</string>
    <string name="meeting_ended">Meeting is ended</string>
    <string name="join_group">Join to group</string>
    <string name="leave">End conversation</string>
    <string name="refuse">Refuse</string>
    <string name="no_requests">No requests</string>
    <string name="req_refused">Your request refused</string>
    <string name="req_accepted">Your request accepted</string>
    <string name="no_conversation">No conversation</string>
    <string name="search2">Search</string>
    <string name="rate">Rate Teacher</string>
    <string name="newversion">There is newer version of this application available, click OK to upgrade now?</string>
    <string name="Myapp">My Andorid App Download</string>
    <string name="later">Remind Later</string>
    <string name="next">Next</string>
    <string name="rate_suc">Rate Success</string>
    <string name="you_rate_before">You Rate Before</string>


</resources>
