<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />

        <variable
            name="signUpListener"
            type="com.endpoint.nadres.interfaces.Listeners.SignUpListener" />

        <variable
            name="showDialogListener"
            type="com.endpoint.nadres.interfaces.Listeners.ShowCountryDialogListener" />

        <variable
            name="model"
            type="com.endpoint.nadres.models.SignUpStudentModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <FrameLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/frame_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />

        <FrameLayout
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintVertical_weight="1"

            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="90dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="90dp"
            android:background="@drawable/btn_code_confirm"
            android:fillViewport="true"
            android:padding="15dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/logo"

            >

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="15dp"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp"
                    android:paddingEnd="8dp"
                    android:paddingRight="8dp"
                    android:singleLine="true"
                    android:text="@string/register_as_a_teacher"
                    android:textColor="@color/colorAccent"
                    android:textSize="17sp"

                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/frame_gap_shape">

                    <LinearLayout
                        android:id="@+id/llimage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_upload" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:gravity="center"
                            android:paddingStart="8dp"
                            android:paddingLeft="8dp"
                            android:paddingEnd="8dp"
                            android:paddingRight="8dp"
                            android:singleLine="true"
                            android:text="@string/upload_profile_photo"
                            android:textColor="@color/colorAccent"
                            android:textSize="17sp"


                            />
                    </LinearLayout>

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/image_fill"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        app:riv_corner_radius="10dp"

                        />
                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="15dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:singleLine="true"
                    android:text="@string/student_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="17sp"

                    />

                <FrameLayout

                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/linear_shape"
                    android:padding="5dp"


                    >


                    <EditText
                        error="@{model.error_name}"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/white"
                        android:hint="@string/teacher_name"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:text="@={model.name}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray4"
                        android:textSize="14sp" />


                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="15dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:singleLine="true"
                    android:text="@string/email"
                    android:textColor="@color/colorAccent"
                    android:textSize="17sp"

                    />

                <FrameLayout

                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/linear_shape"
                    android:padding="5dp"


                    >


                    <EditText
                        android:id="@+id/edtEmail"
                        error="@{model.error_email}"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/white"
                        android:hint="@string/email"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:text="@={model.email}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray4"
                        android:textSize="14sp" />


                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="15dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:singleLine="true"
                    android:text="@string/the_stage"
                    android:textColor="@color/colorAccent"
                    android:textSize="17sp"

                    />

                <FrameLayout

                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/linear_shape"
                    android:padding="5dp"


                    >


                    <Spinner
                        android:id="@+id/spinnerStage"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"

                        android:textSize="14sp" />


                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="15dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:singleLine="true"
                    android:text="@string/classs"
                    android:textColor="@color/colorAccent"
                    android:textSize="17sp"

                    />

                <FrameLayout

                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/linear_shape"
                    android:padding="5dp"


                    >


                    <Spinner
                        android:id="@+id/spinnerClass"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"

                        android:textSize="14sp" />


                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="25dp"
                    android:orientation="horizontal"

                    >

                    <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accept"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        app:buttonTint="@color/colorPrimary"

                        />

                    <TextView
                        android:id="@+id/tvTerms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/terms_and_conditions"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/bt_shape"
                    android:onClick="@{()->signUpListener.checkDataValid()}"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="15sp"

                    />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>