<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

        <variable
            name="title"
            type="String" />

        <variable
            name="lang"
            type="String"

            />


    </data>


<!--    <androidx.core.widget.NestedScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:background="@color/white"-->
<!--        android:fillViewport="true">-->

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"


        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:weightSum="2"

            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="185dp"

                android:layout_weight="1"
                android:background="@color/listen"
                android:descendantFocusability="blocksDescendants"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlCompat">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/listening"
                    android:clickable="false"
                    android:longClickable="false"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/listening"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:clickable="false"
                    android:longClickable="false"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="185dp"

                android:layout_weight="1"
                android:background="@color/speak"
                android:descendantFocusability="blocksDescendants"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlCompat">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/speaking"
                    android:clickable="false"
                    android:longClickable="false"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/speaking"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:clickable="false"
                    android:longClickable="false"

                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:weightSum="2"

            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="185dp"

                android:layout_weight="1"
                android:background="@color/read"
                android:descendantFocusability="blocksDescendants"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlCompat">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/reading"
                    android:clickable="false"
                    android:longClickable="false"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/reading"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:clickable="false"
                    android:longClickable="false"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="185dp"

                android:layout_weight="1"
                android:background="@color/write"
                android:descendantFocusability="blocksDescendants"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlCompat">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/writting"
                    android:clickable="false"
                    android:longClickable="false"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/writing"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:clickable="false"
                    android:longClickable="false"

                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="2"

        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="185dp"

            android:layout_weight="1"
            android:background="@color/voc"
            android:descendantFocusability="blocksDescendants"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/vocabulary"
                android:clickable="false"
                android:longClickable="false"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vocabulary"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:clickable="false"
                android:longClickable="false"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="185dp"

            android:layout_weight="1"
            android:background="@color/grammer"
            android:descendantFocusability="blocksDescendants"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/grammer"
                android:clickable="false"
                android:longClickable="false"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/grammer"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:clickable="false"
                android:longClickable="false"

                />
        </LinearLayout>

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:weightSum="2"

            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="185dp"

                android:layout_weight="1"
                android:background="@color/dire"
                android:descendantFocusability="blocksDescendants"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlCompat">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/dictations"
                    android:clickable="false"
                    android:longClickable="false"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dictation"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:clickable="false"
                    android:longClickable="false"

                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llknow"
                android:layout_width="0dp"
                android:layout_height="185dp"

                android:layout_weight="1"
                android:background="@color/know"
                android:descendantFocusability="blocksDescendants"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlCompat">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/knowledgebank"
                    android:clickable="false"
                    android:longClickable="false"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/knowledge_bank"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:clickable="false"
                    android:longClickable="false"

                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
<!--    </androidx.core.widget.NestedScrollView>-->


</layout>